--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=2dc5483de0edd223caa08ce8277e64cc
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://qu054aaosv2jfzcj:cnhz1j81wdggcww1@uyu7j8yohcwo35j3.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/h0tp3d2paeysz65a"
+# DATABASE_URL="mysql://root:@127.0.0.1:3306/listmanager2022?serverVersion=5.7&charset=utf8mb4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
