--- a/composer.json
+++ b/composer.json
@@ -100,7 +100,7 @@
         "post-install-cmd": [
             "@auto-scripts",
             "@php bin/console doctrine:schema:update --force",
-            "@php bin/console doctrine:fixtures:load | yes"
+            "@php bin/console doctrine:fixtures:load"
         ],
         "post-update-cmd": [
             "@auto-scripts"
